# qmd-go

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum
.claude-plugin/: marketplace.json
.github/workflows/: release.yml  security.yml  test.yml
cmd/qmd/: cleanup.go  collection.go  context.go  embed.go  get.go  ls.go  mcp.go  multiget.go  output.go  query.go  root.go  search.go  status.go  update.go  vsearch.go
internal/config/: config.go  config_test.go  types.go
internal/huggingface/: download.go
internal/indexer/: indexer.go  indexer_test.go
internal/llm/: backend.go  backend_test.go  client_gguf.go  client_gguf_stub.go  client_purego.go  client_purego_stub.go  default_model_api.go  default_model_gguf.go  gguf_enabled_gguf.go  gguf_enabled_stub.go  llm.go  openai.go
internal/store/: chunk.go  documents.go  documents_test.go  embedding.go  search.go  search_test.go  store.go  store_test.go
llama-go/: CMakeLists.txt  README.md  llama_go.cpp  llama_go.h
skills/qmd/: SKILL.md
skills/qmd/references/: mcp-setup.md
test/: eval_harness_test.go
